php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44678 spliti error message includes wrong function name
Submitted: 2008-04-09 13:07 UTC Modified: 2008-04-09 13:47 UTC
From: robin_fernandes at uk dot ibm dot com Assigned:
Status: Closed Package: Regexps related
PHP Version: 5.2CVS-2008-04-09 (snap) OS: Windows
Private report: No CVE-ID: None
 [2008-04-09 13:07 UTC] robin_fernandes at uk dot ibm dot com
Description:
------------
An "Invalid Regular Expression" error message issued by spliti() refers to function split().

Reproduce code:
---------------
<?php
spliti('()', '');
?>

Expected result:
----------------
Warning: spliti(): Invalid Regular Expression in %s on line 2

Actual result:
--------------
Warning: spliti(): Invalid Regular Expression to split() in %s on line 2

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-04-09 13:47 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 22 13:00:02 2026 UTC