MFB: Fixed bug #44678 (spliti error message includes wrong function name)